--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
     </div>
   </template>
 
+  <script src="js/util.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/page-state.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/map.js"></script>
   <script src="js/main.js"></script>
 
 </body>
