--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   <script src="js/page-state.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
+  <script src="js/load.js"></script>
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
   <script src="js/main.js"></script>
