--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
 
   <script src="js/util.js"></script>
   <script src="js/form.js"></script>
-  <!-- <script src="js/data.js"></script> -->
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/message.js"></script>
   <script src="js/ajax.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/page-state.js"></script>
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
