--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@
     </div>
   </template>
 
-  <script src="js/util.js"></script>
+  <!-- <script src="js/util.js"></script> -->
   <script src="js/ajax.js"></script>
-  <script src="js/data.js"></script>
   <script src="js/form.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
