image preview handler

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
   <script src="js/ajax.js"></script>
   <script src="js/debounce.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/preview.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/message.js"></script>
