--- a/index.html
+++ b/index.html
@@ -273,19 +273,7 @@
     </div>
   </template>
 
-  <!-- <script src="js/util.js"></script> -->
-  <script src="js/ajax.js"></script>
-  <script src="js/debounce.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/preview.js"></script>
-  <script src="js/pin.js"></script>
-  <script src="js/card.js"></script>
-  <script src="js/message.js"></script>
-  <script src="js/filter.js"></script>
-  <script src="js/page.js"></script>
-  <script src="js/move.js"></script>
-  <script src="js/main.js"></script>
-
+  <script src="bundle.js"></script>
 
 </body>
 
